[package]
name = "ib_async"
version = "0.1.0"

[dependencies]
futures = "0.1"
tokio = "0.1.8"
failure = "0.1"
byteorder = "1.2"
lazy_static = "1.1.0"
slog = "2.3.2"
bytes="0.4.9"
tokio-io = "0.1"
tokio-uds = "0.2.1"
tokio-codec = "0.1.0"
tokio-timer = "0.2.6"
quick-error = "1.2.2"
memchr = "2.0"
approx = "0.3.0"
ordered-float = "0.5.0"
bit = "0.1.1"
chrono = "0.4"
diesel = "1.3.2"


[dev-dependencies]
slog-async = "2.3.0"
slog-term = "2.4.0"