[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/ib_tws_tokio"]

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.release]
lto = "thin"

[patch.crates-io]
ib_tws_core = { path = "crates/ib_tws_core" }
