[package]
name = "ib_tws_core"
description = "Core utilities for interacting with Interactive Broker's TWS API"
version = "0.1.0-beta.6"
edition = "2021"
readme = "../../README.md"
keywords = ["finance", "library", "interactive-brokers"]
categories = ["encoding"]
license = "LGPL-3.0-only"
repository = "https://github.com/fourbytes/ib_tws_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
bit = "0.1"
ordered-float = "3"
approx = "0.5"
memchr = "2"

futures = { version = "0.3", optional = true }
async-broadcast = { version = "0.4", optional = true }

tracing = "0.1"
thiserror = "1"
miette = "5"

[features]
default = []
async = ["futures", "async-broadcast"]
