[package]
name = "ib_tws_core"
description = "Core utilities for interacting with Interactive Broker's TWS API"
version = "0.2.0-alpha.2"
edition = "2021"
keywords = ["finance", "library", "interactive-brokers"]
categories = ["encoding"]
license = "LGPL-3.0-only"
repository = "https://github.com/fourbytes/ib_tws_rs"

[package.metadata.docs.rs]
all-features = true

[dependencies]
bytes = "1"
bit = "0.1"
ordered-float = "3"
approx = "0.5"
memchr = "2"
rust_decimal = "1"
rust_decimal_macros = "1"

futures = { version = "0.3", optional = true }
async-broadcast = { version = "0.4", optional = true }

baseline = "0.2.0-alpha"

tracing = "0.1"
thiserror = "1"
miette = "5"

document-features = "0.2"

[features]
default = []

## Enables the `AsyncClient`
async = ["futures", "async-broadcast"]
