[package]
name = "ib_tws_tokio"
description = "An Interactive Broker's TWS API client for Tokio"
version = "0.1.0-alpha.1"
edition = "2021"
readme = "../../README.md"
keywords = ["finance", "library", "interactive-brokers"]
categories = ["api-bindings"]
license = "LGPL-3.0-only"
repository = "https://github.com/fourbytes/ib_tws_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
ib_tws_core = "0.1.0-alpha"

bytes = "1"

[dev-dependencies]
miette = { version = "5", features = ["fancy"] }
